V.2.1.0 Added media queries for mobile devices, 960px & 640px 960px will be 2 columns 640px will be 1 column Fixed the Shop html code to be compatible with the new css code Used Cascade to make the images work with text wrapping

--- a/Source/styles.css
+++ b/Source/styles.css
@@ -116,3 +116,51 @@ footer nav a {
     margin: 0 10px;
     font-size: 0.8rem;
 }
+.image-grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 20px;
+}
+.image-container {
+    box-sizing: border-box;
+    text-align: center;
+    width: calc(33.33% - 20px);
+    margin-bottom: 20px;
+    border: 1px solid #ddd;
+    background-color: #fdfffcff;
+}
+.image {
+    
+    max-width: 100%;
+    height: auto;
+    width: 400px;
+}
+.shop-content {
+    background-color: #fdfffcff;
+    padding: auto;
+}
+@media screen and (max-width: 960px) {
+    .image-container {
+        width: calc(50% - 20px);
+    }
+    .navbar {
+        display: flex;
+        flex-direction: column;
+        padding: 10px 10px;
+        padding-bottom: 10px;
+        margin: 0 5px;
+    }
+}
+@media screen and (max-width: 640px) {
+    .image-container {
+        width: 100%;
+    }
+    .navbar {
+        display: flex;
+        flex-direction: column;
+        padding: 10px 5px;
+        margin: 0 5px;
+    }
+    
+}
